메인 비쥬얼

--- a/scss/_jspark.scss
+++ b/scss/_jspark.scss
@@ -75,7 +75,7 @@
 
 // 메인 비주얼
 .main-visual {
-  background-position: calc(-100% + 29.375rem) 0; // 470
+  background-position: 123% 0; // 470
   background-size: contain;
   background-image: url(../../images/renewal/main-visual-01@2x.png);
   background-repeat: no-repeat;
